backend/App/client/src/pages/Explorer/Explorer.scss
@use "../../styles/variables" as variables;
@use "../../styles/transitions" as transitions;
@use "../../styles/theme" as theme;

.border-gradient {
  border-right: 2px solid;
  border-image-slice: 1;
  border-width: 2px;
}

.border-gradient-purple {
  border-image-source: linear-gradient(to top, theme.$Rose, #d53a9d);
}

.categories__wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;

  .container {
    display: flex;
    flex-direction: row;
    width: variables.$medium-resolution;
    min-height: 20vh;
    height: 80vh;
    border-radius: 15px;

    .left-menu {
      width: 16%;
      max-width: 90%;
      resize: horizontal;
      overflow: auto;
      overflow-x: hidden;
      padding: variables.$s-padding;
      border: 1px solid theme.$Grey;
      border-radius: 15px 0 0 15px;
      background-color: rgba($color: theme.$SharkDark, $alpha: 0.9);
      display: flex;
      flex-direction: column;

      .item {
        border-left: 1px solid theme.$Grey;
        padding: variables.$s-padding;
        margin-left: variables.$m-padding;
        transition: transitions.$fast;
        cursor: pointer;
        height: 28px;
        color: white;
        animation: 300ms ease-out 0s 1 onload;
        width: 100%;

        i {
          margin-right: variables.$ss-margin;
        }

        &:hover {
          color: theme.$Rose;
        }

        &:first-child {
          border: none;
          color: theme.$Teal;
          cursor: default;
          margin-left: variables.$s-padding !important;

          i {
            align-self: flex-end;
            font-size: 14px;
            cursor: pointer;

            &:hover {
              color: theme.$Rose;
            }
          }
        }

        &.active {
          color: theme.$Teal;
        }

        @keyframes onload {
          0% {
            transform: translate(-20px);
            opacity: 0;
          }

          100% {
            transform: translate(0px);
            opacity: 1;
          }
        }
      }
    }

    .content__wrapper {
      padding: variables.$m-padding;
      border: 1px solid theme.$Grey;
      background-color: rgba($color: theme.$Shark, $alpha: 0.9);
      border-radius: 0 15px 15px 0;
      min-width: 50px;
      flex: 9;

      .content {
        display: flex;
        flex-direction: column;
        height: 100%;
        overflow-y: auto;
        overflow-x: hidden;
        padding-right: variables.$s-padding;

        .item {
          display: flex;
          flex-direction: row;
          min-height: 40px;
          transition: transitions.$medium;
          border-radius: 5px;
          margin-bottom: variables.$s-margin;
          overflow: hidden;
          color: white;

          &:first-child {
            background-color: theme.$SharkDark;
            cursor: default;

            &:hover {
              color: white;
              background-color: theme.$SharkDark;
            }
          }

          &:nth-child(odd) {
            background-color: theme.$SharkDark;
          }

          &:hover {
            color: black;
            background-color: white;
          }

          & > * {
            margin: variables.$m-padding;
          }

          .information {
            display: flex;
            flex-direction: row;
            align-items: center;
            flex: 3 1;
            white-space: nowrap;

            * {
              margin-right: variables.$s-margin;
              flex: 1 1;
            }

            .icon {
              flex: 0;
            }

            .text {
              flex: 2 1;
              min-width: 10%;
            }
          }

          .actions {
            display: flex;
            align-items: center;
            flex: 1;
            justify-content: flex-end;

            * {
              margin-right: variables.$s-margin;
            }

            i:hover {
              color: theme.$Rose;
              transform: scale(1.1);
            }
          }

          @keyframes onload {
            0% {
              transform: translate(-20px);
              opacity: 0;
            }

            100% {
              transform: translate(0px);
              opacity: 1;
            }
          }
        }
      }
    }
  }
}

